# heart-disease-mlops

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_docker.ps1
.github/workflows/: ci-cd.yml
api/: main.py
helm/heart-api/: Chart.yaml  values.yaml
helm/heart-api/templates/: _helpers.tpl  deployment.yaml  service.yaml
k8s/: deployment.yaml  ingress.yaml  service.yaml
models/: metrics.json
monitoring/: prometheus.yml
monitoring/grafana/: heart-dashboard.json
notebooks/: 01_eda.ipynb  02_training.ipynb  03_inference.ipynb  _generate_notebooks.py
reports/: capture_actions.py  capture_screenshots.py  eda_summary.txt  make_architecture.py  make_report.py  record_walkthrough.py  render_terminal.py
reports/screenshots/: README.md  verification-log.txt
src/heart_mlops/: config.py  data_download.py  eda.py  predict.py  preprocessing.py  train.py
tests/: conftest.py  test_api.py  test_data.py  test_model.py
